tests/baselines/reference/taggedTemplateWithoutDeclaredHelper.errors.txt
tests/cases/compiler/foo.ts(5,23): error TS2343: This syntax requires an imported helper named '__makeTemplateObject', but module 'tslib' has no exported member '__makeTemplateObject'.


==== tests/cases/compiler/foo.ts (1 errors) ====
    function id<T>(x: T) {
      return x;
    }
    
    export const result = id `hello world`;
                          ~~~~~~~~~~~~~~~~
!!! error TS2343: This syntax requires an imported helper named '__makeTemplateObject', but module 'tslib' has no exported member '__makeTemplateObject'.
    
==== tests/cases/compiler/node_modules/tslib/index.d.ts (0 errors) ====
    export { };
    